--- a/public/app/plugins/panel/graph/tab_display.html
+++ b/public/app/plugins/panel/graph/tab_display.html
@@ -64,7 +64,7 @@
 			<div class="gf-form" ng-show="ctrl.panel.stack">
 				<label class="gf-form-label width-9">Stacked value</label>
 				<div class="gf-form-select-wrapper max-width-8">
-					<select class="gf-form-input" ng-model="ctrl.panel.tooltip.value_type" ng-options="f for f in ['cumulative','individual']" ng-change="ctrl.render()"></select>
+					<select class="gf-form-input" ng-model="ctrl.panel.tooltip.value_type" ng-options="f for f in ['cumulative','individual','total']" ng-change="ctrl.render()"></select>
 				</div>
 			</div>
 		</div>
